--- a/Store API/package.json
+++ b/Store API/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-error": "^0.0.2",
     "express-async-handler": "^1.2.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1"
