--- a/JWT-Basics/package.json
+++ b/JWT-Basics/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
